# DendrotectorBack

./: main.py  pyproject.toml
api/: __init__.py  logging.py  schemas.py  tasks.py
service/: generation.py
