[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "StolovAR",email = "andrey.stolov.04@gmail.com"}
]

readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "orjson (>=3.10.18)",
    "loguru (>=0.7.3)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
